--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
+    "@react-three/drei": "^10.0.1",
+    "@react-three/fiber": "^9.0.4",
+    "framer-motion": "^12.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^6.29.0",
+    "react-tilt": "^1.0.2",
+    "react-vertical-timeline-component": "^3.5.3",
     "tailwindcss": "^4.0.8"
   },
   "devDependencies": {
