--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,9 @@ jobs:
           node-version: 18
           cache: 'npm'
       - name: Install dependencies
-        run: npm ci
+        run: | 
+          rm -f package-lock.json
+          npm install --legacy-peer-deps
       - name: Build
         run: npm run build
       - name: Setup Pages
