--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^6.29.0",
     "react-tilt": "^1.0.2",
-    "react-vertical-timeline-component": "^3.5.3",
-    "tailwindcss": "^4.0.8"
+    "react-vertical-timeline-component": "^3.5.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
@@ -37,6 +36,7 @@
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
     "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
     "vite": "^6.1.0"
   }
 }
